2005-12-16  Christian Biesinger  <cbiesinger@web.de>

	reviewed by: cworth

	* CODING_STYLE:
	* src/cairo-atsui-font.c: (_cairo_atsui_font_old_show_glyphs):
	* src/cairo-clip-private.h:
	* src/cairo-clip.c: (_cairo_clip_combine_to_surface):
	* src/cairo-ft-font.c: (_cairo_ft_show_glyphs):
	* src/cairo-gstate-private.h:
	* src/cairo-gstate.c: (_cairo_gstate_init),
	(_cairo_gstate_init_copy), (_cairo_gstate_set_operator),
	(_cairo_gstate_get_operator), (_cairo_gstate_paint),
	(_cairo_operator_bounded_by_mask),
	(_cairo_operator_bounded_by_source),
	(_cairo_gstate_clip_and_composite_with_mask),
	(_cairo_gstate_clip_and_composite_combine),
	(_cairo_gstate_clip_and_composite), (_cairo_gstate_mask),
	(_cairo_gstate_stroke), (_composite_trap_region),
	(_composite_traps_draw_func),
	(_cairo_surface_clip_and_composite_trapezoids),
	(_cairo_gstate_fill), (_cairo_gstate_show_glyphs):
	* src/cairo-image-surface.c: (_pixman_operator),
	(_cairo_image_surface_composite),
	(_cairo_image_surface_fill_rectangles),
	(_cairo_image_surface_composite_trapezoids):
	* src/cairo-meta-surface-private.h:
	* src/cairo-meta-surface.c: (_cairo_meta_surface_paint),
	(_cairo_meta_surface_mask), (_cairo_meta_surface_stroke),
	(_cairo_meta_surface_fill), (_cairo_meta_surface_show_glyphs),
	(_cairo_meta_surface_replay):
	* src/cairo-pdf-surface.c: (_cairo_pdf_surface_composite),
	(_cairo_pdf_surface_fill_rectangles), (_cairo_pdf_surface_fill),
	(_cairo_pdf_surface_composite_trapezoids),
	(_cairo_pdf_surface_old_show_glyphs):
	* src/cairo-ps-surface.c: (_cairo_ps_surface_composite),
	(_cairo_ps_surface_fill_rectangles),
	(_cairo_ps_surface_composite_trapezoids),
	(_cairo_ps_surface_old_show_glyphs), (_cairo_ps_surface_paint),
	(_cairo_ps_surface_mask), (_cairo_ps_surface_stroke),
	(_cairo_ps_surface_fill), (_cairo_ps_surface_show_glyphs),
	(operator_always_opaque), (operator_always_translucent),
	(color_operation_needs_fallback),
	(pattern_operation_needs_fallback), (_ps_output_composite),